<resources>
    <string name="app_name">Group10B_HW03</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="trivia_app">Welcome to \n Trivia App</string>
    <string name="start_trivia">Start Trivia</string>
    <string name="create_ques">Create Quiz Question</string>
    <string name="delete_ques">Delete All My Questions</string>
    <string name="exit">Exit</string>
    <string name="quit">Quit</string>
    <string name="next">Next</string>
    <string name="results">Trivia Results</string>
    <string name="correctAnswers">Correct Answers</string>
    <string name="tryAgain">Try Again</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_create_question">CreateQuestionActivity</string>
    <string name="title_activity_trivia">TriviaActivity</string>
    <string name="selectImage">Select Image</string>
    <string name="questionType">Type question here</string>
    <string name="optionType">Type option here</string>
    <string name="submit">Submit</string>
</resources>
