<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trivia_app"
        android:id="@+id/triviaApp"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:layout_marginLeft="80dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_trivia"
        android:id="@+id/startTrivia"
        android:layout_below="@+id/triviaApp"
        android:layout_marginTop="40dp"
        android:textSize="20dp"
        android:layout_alignRight="@+id/createQuiz"
        android:layout_alignEnd="@+id/createQuiz"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="2dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_ques"
        android:id="@+id/createQuiz"
        android:layout_below="@+id/startTrivia"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_ques"
        android:id="@+id/deleteAll"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/createQuiz"
        android:textSize="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/exit"
        android:textSize="20dp"
        android:layout_below="@+id/deleteAll"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

</RelativeLayout>
