<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.group10b_hw03.CreateQuestionActivity"
    android:weightSum="1">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectImage"
        android:id="@+id/buttonSelectImage"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/imageViewAddQ"
        android:src="@drawable/image"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextQuestion"
        android:layout_gravity="center_horizontal"
        android:hint="@string/questionType" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/radioSol">

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextOptions"
            android:hint="@string/optionType"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:id="@+id/imageViewAddOption"
            android:src="@drawable/add"/>

    </LinearLayout>

    <RadioGroup
        android:layout_width="345dp"
        android:layout_height="112dp"
        android:id="@+id/radioGroupOptions"
        android:layout_weight="1.22"></RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/buttonQuestionSubmit"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
