<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="4dp"
    tools:context="com.example.group10b_hw03.ResultsActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:id="@+id/triviaAppResult"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:layout_marginLeft="80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correctAnswers"
        android:id="@+id/correctAnswers"
        android:layout_below="@+id/triviaAppResult"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:id="@+id/quit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tryAgain"
        android:id="@+id/tryAgain"
        android:layout_alignTop="@+id/quit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultText"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="20dp"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/correctAnswers"
        android:layout_toRightOf="@+id/quit"
        android:layout_toEndOf="@+id/quit"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressText"
        android:layout_alignTop="@+id/progressBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
